2004-09-26  Wakaba  <wakaba@suika.fam.cx>

	* dis2pm.pl (constgroup2perl): Capitalize name.

	* idl2dis.pl (type, raise): Prepend namespace prefix if 
	type is 'DOMString' or 'DOMException' and it is not defined.
	(MAIN): Make empty 'Return' element even if return
	value is void.
	(supply_incase): New.
	(const): Use 'FullName' in favor of 'Description' if the name of
	the const group is not a machine-friendly name.

2004-09-26  Wakaba  <wakaba@suika.fam.cx>
	
	* dis2pm.pl (get_incase_label): Error if label is undef.

2004-09-25  Wakaba  <wakaba@suika.fam.cx>

	* dis2pm.pl: Generate TODO list.
	(method2perl): Use "dis".
	(disdoc2pod, disdoc2text): 'HTML', 'InfosetP' element types added.
	(perl_builtin_code): New code 'isRelativeDOMURI' added.

	* ManakaiDOMMain.dis (MDOM_REPLACE_BY_ITSELF_NO_EFFECT): New
	warning code.

	* dis2pm.pl (attr2perl, method2perl): Output 'undef;' if the 
	method or attribute(set) does not return a value.
	(perl_code): New macro 'WHEN' added.  Macro 'INT{}' now allow
	parameter.

2004-09-24  Wakaba  <wakaba@suika.fam.cx>

	* dis2pm.pl (perl_exception): New 'subtype' parameter added.
	(param2poditem): New.
	(MAIN): Write 'NAMESPACE BINDINGS' pod section if necessary.
	(perl_builtin_code): More developer-friendly error report.
	(perl_code): New 'REQUIRE' statement added.
	(disdoc2text, disdoc2pod): New 'QUOTE' element type added.
	(get_value_literal): Default for unknown type is now 'undef'.

2004-09-22  Wakaba  <wakaba@suika.fam.cx>

	* dis2pm.pl (perl_builtin_code): New 'CheckName' and 
	'XMLVersion' added.

2004-09-20  Wakaba  <wakaba@suika.fam.cx>

	* dis2pm.pl (get_redef_description): See 'RedefinedBy' elements 
	even if it is 'ReMethod' and 'ReAttr' element.

2004-09-20  Wakaba  <wakaba@suika.fam.cx>

	* dis2pm.pl (type_label): New option 'is_pod' implemented.
	(get_redef_description): New function.
	(get_isa_description): New function.
	(disdoc2pod, disdoc2text): New.
	(get_description): DISDOC support.