@@ -1,6 +1,4 @@
 Namespace:
-  @DOMCore:
-    http://suika.fam.cx/~wakaba/archive/2004/8/18/dom-core#
   @DOMXML:
     http://suika.fam.cx/~wakaba/archive/2004/8/18/dom-core#
   @infoset:
@@ -21,8 +19,12 @@ Namespace:
   @xmlns:
     http://www.w3.org/2000/xmlns/
 Module:
-  @Name:  dom
-    @@Prefix:  w3c.org
+  @Name:DOMCore
+  @BindingName:
+    @@@:  dom
+    @@prefix:  w3c.org
+    @@Type:
+      lang:IDL-DOM
   @FullName:
     @@lang:en
     @@@: DOM Core Module
@@ -31,10 +33,6 @@ Module:
       http://www.w3.org/TR/2004/REC-DOM-Level-3-Core-20040407/core.html#ID-BBACDC08
   @Namespace:
     http://suika.fam.cx/~wakaba/archive/2004/8/18/dom-core#
-  @Package:
-    @@Type:
-      lang:Perl
-    @@@: __CLASS{DOMCore}__
   
   @Description:
     @@lang:en
@@ -43,10 +41,13 @@ Module:
       the fundemental DOM interfaces that must be fully implemented by 
       all conforming DOM implementations.
   
+  @Author:
+    @@FullName:Wakaba
+    @@Mail:w@suika.fam.cx
   @License:
-     license:Perl
+     license:Perl+MPL
   @Date.RCS:
-     $Date: 2004/09/26 15:08:59 $
+     $Date: 2004/09/27 03:54:23 $
 
   @ConditionDef:
     @@Name: DOM1
