@@ -7,8 +7,6 @@ Namespace:
      http://suika.fam.cx/~wakaba/archive/2004/8/18/lang#
   @license:
      http://suika.fam.cx/~wakaba/archive/2004/8/18/license#
-  @MDOMCore:
-    http://suika.fam.cx/~wakaba/archive/2004/mdom-core#
   @MDOM_EXCEPTION:
      http://suika.fam.cx/~wakaba/archive/2004/8/4/manakai-dom-exception#
   @null:
@@ -34,10 +32,13 @@ Module:
       The Manakai DOM Core Module provides supplemental interfaces 
       that should be used with the DOM Core Module.
   
+  @Author:
+    @@FullName:Wakaba
+    @@Mail:w@suika.fam.cx
   @License:
-     license:Perl
+     license:Perl+MPL
   @Date.RCS:
-     $Date: 2004/09/26 11:43:06 $
+     $Date: 2004/09/27 03:54:23 $
 
   @ConditionDef:
     @@Name: DOM1
