@@ -15,16 +15,23 @@ Namespace:
      \
 Module:
   @Name: ManakaiDOMMain
+  @BindingName:
+    @@@: mdommain
+    @@Type:
+      lang:IDL-DOM
   @FullName:
     @@lang:en
     @@@: Manakai DOM Implementation Main Module
   @Namespace:
     http://suika.fam.cx/~wakaba/archive/2004/8/18/manakai-dom#
   
+  @Author:
+    @@FullName:Wakaba
+    @@Mail:w@suika.fam.cx
   @License:
-     license:Perl
+     license:Perl+MPL
   @Date.RCS:
-     $Date: 2004/09/25 12:58:21 $
+     $Date: 2004/09/27 03:54:23 $
   
   @Description:
     @@lang:en
