@@ -9,8 +9,6 @@ Namespace:
      http://suika.fam.cx/~wakaba/archive/2004/8/18/lang#
   @license:
      http://suika.fam.cx/~wakaba/archive/2004/8/18/license#
-  @MDOMXML:
-    http://suika.fam.cx/~wakaba/archive/2004/mdom-xml#
   @MDOM_EXCEPTION:
      http://suika.fam.cx/~wakaba/archive/2004/8/4/manakai-dom-exception#
   @TreeCore: \
@@ -32,10 +30,13 @@ Module:
       The Manakai DOM XML Module provides supplemental interfaces 
       that should be used with the DOM XML Module.
   
+  @Author:
+    @@FullName:Wakaba
+    @@Mail:w@suika.fam.cx
   @License:
-     license:Perl
+     license:Perl+MPL
   @Date.RCS:
-     $Date: 2004/09/26 11:43:06 $
+     $Date: 2004/09/27 03:54:24 $
 
   @ConditionDef:
     @@Name: DOM1
