@@ -1,3 +1,11 @@
+2004-09-27  Wakaba  <wakaba@suika.fam.cx>
+
+	* dis2pm.pl (MAIN): Output "AUTHOR" pod section; support Perl+MPL
+	license.
+
+	* idl2dis.pl: Output module name and prefix as 'BindingName'
+	and 'FileName'.
+
 2004-09-26  Wakaba  <wakaba@suika.fam.cx>
 
 	* dis2pm.pl (constgroup2perl): Capitalize name.
